<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Task Racer</string>
    <string name="menu_settings">Settings</string>
    <string name="race_me">Race me up!</string>
    <string name="Statistics">How did I do?</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_race">New Race</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="title_activity_go_carting">Go Carting</string>
    <string name="title_activity_fire_in_the_home">Run With Me</string>
    <string name="stats_msg">Statistics and history go here</string>
    <string name="options_msg">Options specific to this race go here</string>
    <string name="race_now">Race Now!</string>
    <string name="race_page">The Live Race Page</string>
    <string name="title_activity_live_race">Live Race</string>

    <string-array name="race_types">
        <item>Go Carting</item>
        <item>Run With Me</item>
        <item>Rise And Shine!</item>
    </string-array>

    <string name="gocarting_input_1">How many items?</string>
    <string name="gocarting_input_2">Estimated duration</string>
    <string name="gocarting_input_1_defaultval">10</string>
    <string name="gocarting_input_2_defaultval">10</string>
    <string name="riseandshine_input_1_defaultval">60</string>
    <string name="runner">Runner</string>
    <string name="agespec">Age: 25</string>
    <string name="title_activity_live_race_dynamic">LiveRace_dynamic</string>
    <string name="title_activity_launch_live_race">LaunchLiveRace</string>
    <string name="waiting">Retrieving other racers...</string>
    <string name="riseandshine_input">Distance</string>

    <string-array name="distance_vals">
        <item>3 Km</item>
        <item>5 Km</item>
        <item>10 Km</item>
        <item>15 Km</item>
        <item>21.6 Km</item>
        <item>43.2 Km</item>
    </string-array>

    <string name="title_activity_rise_and_shine">Rise And Shine!</string>
    <string name="trueriseandshine_prompt">Estimated Duration</string>
    <string name="title_activity_history">History Activity</string>
    <string name="history">History</string>
    <string name="hello">Hello World, SplashActivity!</string>
    <string name="activity_splash_title_line_one">LOADING</string>
    <string name="activity_splash_title_line_two">SPLASH SCREEN</string>
    <string name="activity_splash_title_line_three">TUTORIAL</string>
    <string name="activity_main_made_it">You did it!</string>
    <string name="title_activity_race_result">RaceResult</string>

</resources>