<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/competition" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <Button
            android:id="@+id/race_me"
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_gap"
            android:background="@drawable/green"
            android:gravity="center"
            android:onClick="race_me_up"
            android:text="@string/race_me" />
        
        
        <Button
            android:id="@+id/Statistics"
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_gap"
            android:background="@drawable/green"
            android:gravity="center"
            android:onClick="openhistory"
            android:text="@string/Statistics" />

        

     </LinearLayout>
   
        
    <ImageButton
        android:id="@+id/History"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_gap"
        android:gravity="center"
        android:src="@drawable/tasktracer"
        android:text="@string/history"
        android:onClick="openhistory" /> 
        
    

</LinearLayout>
